# physics-simulator

./: .gitignore  CMakeLists.txt  main  main.cpp
include/physics/: ball.hpp  constants.hpp
src/: main.cpp
src/physics/: ball.cpp
